[fix] SchoolCard関連のコード整理, レスポンス変更
