# ApiDocment.yaml
@@ -2,7 +2,7 @@ openapi: "3.0.0"
 info:
   title: DXContestSupportSystem API(仮名)
   description: DXコンテストに関する活動においてサポートを行うシステムに関連するAPI
-  version: 0.1.3 beta
+  version: 0.1.4 beta
 security:
   - api_key: []
 servers:
@@ -221,6 +221,26 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/SchoolCard'
+        '404':
+          description:
+            対象の学生データ無し
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse'
+              example:
+                status: Info
+                message: Not Found
+        '400':
+          description:
+            既に登録済み
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse'
+              example:
+                status: Error
+                message: There is already Data
   /schoolcards/{scoolcardId}:
     get:
       tags:
@@ -248,8 +268,18 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
               example:
-                status: errer
-                message: NotFound
+                status: Info
+                message: Not Found
+        '402':
+          description:
+            システムメッセージ
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse'
+              example:
+                status: Error
+                message: Not Enough Property
   
   /room:
     get:
