# src/router/SchoolCard.ts
@@ -3,6 +3,7 @@ import { Router } from 'express'
 const SchoolCard = Router()
 
 import {DB} from '../db/index'
+import {Msg} from '../Msg'
 
 /*------------
 get /schoolcard
@@ -18,70 +19,86 @@ SchoolCard.get('/', async (req, res) => {
         res.status(200).json(Users)
     } catch(e) {
         (await T).rollback();
-        const resMes = {
-            "status": "Error",
-            "message": "NotFound"
-        }
-        res.status(404).json(resMes)
+        console.log("###########################")
+        console.error(e)
+        res.status(500).json(Msg.ServerError);
     }
 })
 
 
 SchoolCard.post('/', async (req, res) => {
+    if (!req.body.schoolCardId || !req.body.userId) {
+        res.status(402).json(Msg.NotEnoughProp);
+        return 0
+    }
     const T = DB.instance.transaction();
-    if (req.body.schoolCardId == "" || req.body.userId == "") {
-        const resMes = {
-            status: "Error",
-            message: "Not Enough Body"
+    try {
+        const isUser = await DB.Users.findOne({
+            where: {
+                id: req.body.userId
+            }
+        })
+        if (!isUser) {
+            res.status(404).json(Msg.NotFound);
+            (await T).commit()
+            return 0
         }
-        res.status(402).json(resMes);
-    } else {
-        try {
-            const sendData = {
-                id: req.body.schoolCardId,
+
+        const isCard = await DB.SchoolCards.findOne({
+            where: {
                 userId: req.body.userId
             }
-            const dbRes = await DB.SchoolCards.create(sendData);
+        })
+        if (isCard) {
+            res.status(400).json({
+                "status":"Error",
+                "message":"There is already Data",
+                "schoolCardData": isCard
+            });
             (await T).commit()
-            res.status(201).json(dbRes);
-        } catch(e) {
-            (await T).rollback();
-            const resMes = {
-                "status": "Error",
-                "message": "ServerError"
-            }
-            res.status(500).json(resMes);
+            return 0
         }
+
+        const sendData = {
+            id: req.body.schoolCardId,
+            userId: req.body.userId
+        }
+        const dbRes = await DB.SchoolCards.create(sendData);
+        (await T).commit()
+        res.status(201).json(dbRes);
+    } catch(e) {
+        (await T).rollback();
+        console.log("###########################")
+        console.error(e)
+        res.status(500).json(Msg.ServerError);
     }
 })
 
 
 SchoolCard.get('/:schoolcardId', async (req, res) => {
+    if (!req.params.schoolcardId) {
+        res.status(402).json(Msg.NotEnoughProp);
+        return 0
+    }
     const T = DB.instance.transaction();
-    if (req.params.schoolcardId == "") {
-        const resMes = {
-            status: "Error",
-            message: "Not Enough Params"
-        }
-        res.status(402).json(resMes);
-    } else {
-        try {
-            const option = {
-                where: {
-                    id: req.params.schoolcardId
-                }
+    try {
+        const SchoolCard = await DB.SchoolCards.findOne({
+            where: {
+                id: req.params.schoolcardId
             }
-            const Users = await DB.SchoolCards.findOne(option);
-            (await T).commit();
-            res.status(200).json(Users)
-        } catch(e) {
-            (await T).rollback();
-            const resMes = {
-                "status": "Error",
-                "message": "NotFound"
-            }
-            res.status(404).json(resMes)
+        });
+        (await T).commit();
+        if (SchoolCard) {
+            res.status(200).json(SchoolCard)
+        } else {
+            res.status(404).json(Msg.NotFound)
         }
+        
+    } catch(e) {
+        (await T).rollback();
+        console.log("###########################")
+        console.error(e)
+        res.status(500).json(Msg.ServerError);
     }
 })
 
